- Fixed bug #48629 (get_defined_constants() ignores categorize parameter)